backend: fix: fixed regenerateFutureSlots
- added @Value to responses
- added exception handling to missing request parameter
- returns SlotResponses with user timezone